--- a/Assignment_Seven.htm
+++ b/Assignment_Seven.htm
@@ -64,10 +64,33 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <h2 class="w3-text-blue">First Step</h2>
         <p>The first thing that I did was go into fusion 360 and I designed an incredibly complex shape with lots of intersting angles.</p>
         <p>That was a lie the first thing I did was go onto TinkerCad, and I found a shape that I thought was kinda neat. I then recgnized that I couldn't lay it flat in its current form so I flattened off a side so I could lay it on the floor. Then boom I downloaded the .stl file, and got ready to toss it into fusion slicer.</p>
+        <img src="Images/Week7/Rhombus%20Shape.png" alt="Rhombus" style="width:250px;height:250px;">
+        <img src="Images/Week7/Cut%20Rhombus%20Shape.png" alt="Cut Rhombus" style="width:250px;height:250px;">
+        <img src="Images/Week7/Downloading%20Rhombus.png" alt="Downloading Rhombus" style="width:250px;height:250px;">
         <h2 class="w3-text-blue">Awful Software</h2>
         <p>Here is where my story of my battle with fusion slicer should probably go, however to hold off telling the story till here would've killed me. So I unfortunately need to get right into describing how I made the zip file that I needed.</p>
-        <p>The process of actually just getting the zip was surprisingly pleasant. I just tossed in the .stl. Made the material type known as cardboard. I then told it how many slices I wanted on each axis, and picked a size for the thing that seemed reasonable to me. Once that was done, I could not go look at the instructions or else the program crashes. That took me about 3 times to figure out, and in the end I just guessed that the numbers probably lined up. Since I couldn't look at the instructions step the last thing left for me to do is to </p>
-        <p>You can click <a href="3D-PrintModels.zip" target="_blank">here</a> to download the files I used</p>
+        <p>The process of actually just getting the zip was surprisingly pleasant. I just tossed in the .stl. Made the material type known as cardboard. I then told it how many slices I wanted on each axis, and picked a size for the thing that seemed reasonable to me. Once that was done, I could not go look at the instructions or else the program crashes. That took me about 3 times to figure out, and in the end I just guessed that the numbers probably lined up. Since I couldn't look at the instructions step the last thing left for me to do is to toss it all into illustrator, and combine them all onto one page.</p>
+        <img src="Images/Week7/Cut%20Image.png" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Slicer%20Thing.png" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Slicer%20Settings.png" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Save%20Screen.png" alt="One arm" style="width:250px;height:250px;">
+        <h2 class="w3-text-blue">Tiny Mistake</h2>
+        <p>So since I've been swapping between computers and have been bad at acutally tossing things up at this website, so I am unfortunately unable to show you photos of the wonderful time I had playing in illustrator. In my perfect world I would have just redone this process to show you photos of it. However I can't download Illustrator, so I am up the proverbial river. </p>
+        <p>So when I first opened the files I got onto Illustrator I had several pages of slices with alot of empty space on them. So what I did was I took each of the slices, and put it onto one page. I then seperated the text from the slices, and sent them to the slicer application.</p>
+        <h2 class="w3-text-blue">Putting It Together</h2>
+        <p>This really wasn't bad at all it is just a matter of glueing it together based off of the numbers on the thing. I only burned myself with the hot glue like a half dozen times, so that was nice.</p>
+        <img src="Images/Week7/Cutting%20Board.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Cutting%20Board%202.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Step%201.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Step%202.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Step%203.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/step%204.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Finished%20thing.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/Finished.JPG" alt="One arm" style="width:250px;height:250px;">
+
+
+
+        <p>You could click <a href="" target="_blank">here</a> to download the files I used if I had any to share sorry. :(</p>
 
 
 
@@ -93,7 +116,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-16">
       <h4>Contact Me</h4>
-        <a href="proctor_john@wheatoncollege.edu" class="w3-bar-item w3-button w3-theme-l1">Email</a>
+        <a href="mailto: proctor_john@wheatoncollege.edu" class="w3-bar-item w3-button w3-theme-l1">Email</a>
         <a href="https://www.instagram.com/john.m.proctor/" class="w3-bar-item w3-button w3-theme-l1">Instagram</a>
         <a href="https://twitter.com/JohnMProcto18" class="w3-bar-item w3-button w3-theme-l1">Twitter</a>
 
