--- a/Assignment_Seven.htm
+++ b/Assignment_Seven.htm
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 
 
-        <p>You could click <a href="" target="_blank">here</a> to download the files I used if I had any to share sorry. :(</p>
+        <p>You could click <a href="Images/Week7/SlicerSmall.eps" target="_blank">here</a> to download the files I used but only the bulk ones I can't combine them in illustrator :(</p>
 
 
 
