--- a/Assignment_Nine.htm
+++ b/Assignment_Nine.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Assignment Seven</title>
+<title>Assignment Nine</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -59,18 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">Project Eight</h1>
-        <p>This project was funcitonally the same as project 7 except I made the numbers bigger and burt my hands more with hot glue. So unfortunately I have less material to do a big fun write up on but if you would like to read something you can click  <a href="Assignment_Seven.htm">here</a> to go read my assignment seven again.</p>
-        <p>The only thing that I feel bears repeating is the fact that although I did totally merge them in illustrator, really I even took photos of it I'm pretty sure the photos are even on the machine in the makerspace nearby the laser cutter. I am unable to go in and snag those photos since I am now home. I recognize this was foolish of me and I am likely to be punished as a result, however that is how the cookie crumbles.</p>
-        <img src="Images/Week8/Big%20Slicer%20Image.png" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Cut%20One.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Cut%20Two.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Cut%203.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Scraps.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Step%20One.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Step%20N.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/done.JPG" alt="One arm" style="width:250px;height:250px;">
-        <img src="Images/Week8/Finished%20Ones.JPG" alt="One arm" style="width:250px;height:250px;">
+      <h1 class="w3-text-blue">Project Nine</h1>
 
 
 
