--- a/Assignment_Eight.htm
+++ b/Assignment_Eight.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Assignment Seven</title>
+<title>Assignment Eight</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
