--- a/Assignment_Nine.htm
+++ b/Assignment_Nine.htm
@@ -60,13 +60,40 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-blue">Project Nine</h1>
-        <p></p>
+        <p>Now I've written this assignment out 3 times now so something weird is going on with brackets. So I here I go for hopefully the last time. This was a really cool project to work on. I thought it wasn't to difficult and it ended up with a really cool product.</p>
+        <h2 class="w3-text-blue">Digital Fabrication?</h2>
+        <p>Before I get into the details of actually doing the project I should answer the question that you posed to me. I think that vinyl cutting certainly is digital fabrication. The reason that I think it is that in order to actually have anything vinyl cut, I need to design something digitally on a computer. So if I am designing something digitally and then fabrication it. It sure seems like it is digital fabrication to me.</p>
+        <h2 class="w3-text-blue">Getting an SVG</h2>
+        <p>Starting this project I was a little bit concerned because it seems like a creative project, and I felt I would stuggle to come up with something to actually put on a sweatshirt. However I was fortunate that when I went into the fiberlab I had on a shirt that had a phrase on it that I'd like to have on a sweatshirt. It was a Groot quote, so I decided to put a photo of groot underneath. Once I had that done I needed to just combine the photo and my phrase into one image using the software that is available in space.</p>
+        <img src="Images/Week9/IMG_3102.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3103.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3101.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3105.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3108.JPG" alt="One arm" style="width:250px;height:250px;">
+        <h2 class="w3-text-blue">The Machine!</h2>
+        <p>After I had the design made I just had to set up the machine so I could run it. In order to do this I chose a white vinyl and clipped it into the machine on the right side so that I could have it clipped with three tongs. I then moved the blade so that I wouldn't waste alot of vinyl. Once everything was in place I checked the settings to make sure everything was set up for the right kind of vinyl, and I started cutting.</p>
+        <img src="Images/Week9/IMG_3098.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3099.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3104.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3108.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3106.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG_3107.JPG" alt="One arm" style="width:250px;height:250px;">
+        <h2 class="w3-text-blue">Peel and Press</h2>
+        <p>The process is kinda in the name. I took the vinyl over to the table and started peeling. It all came apart pretty nicely accept for the fact that I completely forgot to take the smile hole out of his mouth. Once everything was all peeled I put it over my sweatshirt. Took it over to the press, and I pressed it onto the sweatshirt, and now I have a new custom sweatshirt!</p>
+        <img src="Images/Week9/IMG-1881.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG-1882.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG-1883.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG-1884.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG-1885.JPG" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week9/IMG-1886.JPG" alt="One arm" style="width:250px;height:250px;">
+        <h2 class="w3-text-blue">Me in the Sweatshirt</h2>
+        <p>This is a photo of me in the sweatshirt.</p>
+        <img src="Images/Week9/unnamed.jpg" alt="Me wearing a sweatshirt" style="width:250px;height:300px;">
 
 
 
 
 
 
-
-        <p>You could click <a href="Images/Week8/Big%20Slicer%20Prints.zip" target="_blank">here</a> to download the files I used but only the bulk ones I can't combine them in illustrator :(</p>
+        <p>You could click <a href="Images/Week9/GrootShirt.svg" target="_blank">here</a> to download the files I used.</p>
 
