--- a/Assignment_Ten.htm
+++ b/Assignment_Ten.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Assignment Nine</title>
+<title>Assignment Ten</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -83,5 +83,5 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week10/IMG-1915.JPG" alt="One arm" style="width:250px;height:250px;">
 
 
-        <p>You could click <a href="Images/Week9/GrootShirt.svg" target="_blank">here</a> to download the files I used.</p>
+
 
