--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Seven.htm">Project Seven</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Eight.htm">Project Eight</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Nine.htm">Project Nine</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Ten.htm">Project Ten</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Eleven.htm">Project Eleven</a>
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
