things kevin told me

--- a/Assignment_Eleven.htm
+++ b/Assignment_Eleven.htm
@@ -90,6 +90,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week11/MULTILIGHT.PNG" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week11/SetUP%20LIGHT.PNG" alt="One arm" style="width:250px;height:250px;">
         <img src="Images/Week11/LoopLIGHTS.PNG" alt="One arm" style="width:250px;height:500px;">
+        <h2 class="w3-text-blue">Coding Assignment Two</h2>
+        <p>This assignment was just a little coding thing that was meant to count to keep track of how many seconds have passed. It is in the loop section with a counter value that increases everytime it goes through. Once it counts there is an if else statement to check if it's a multiple of 5 if it is it prints John otherwise it prints the value stored in the counter.</p>
+        <img src="Images/Week11/COUNTERCODE.PNG" alt="One arm" style="width:250px;height:500px;">
 
 
 
