--- a/Assignment_Ten.htm
+++ b/Assignment_Ten.htm
@@ -84,6 +84,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week10/IMG-1914.JPG" alt="One arm" style="width:250px;height:250px;">
         <img src="Images/Week10/IMG-1915.JPG" alt="One arm" style="width:250px;height:250px;">
 
+        <p>You could click <a href="Images/Week10/combinepdf.pdf" target="_blank">here</a></p>
+
 
 
 
