--- a/Assignment_Nine.htm
+++ b/Assignment_Nine.htm
@@ -90,6 +90,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <h2 class="w3-text-blue">Me in the Sweatshirt</h2>
         <p>This is a photo of me in the sweatshirt.</p>
         <img src="Images/Week9/unnamed.jpg" alt="Me wearing a sweatshirt" style="width:250px;height:300px;">
+        <img src="Images/Week9/IMG-1920.JPG" alt="Me wearing a sweatshirt" style="width:250px;height:300px;">
+
 
 
 
