--- a/Assignment_Seven.htm
+++ b/Assignment_Seven.htm
@@ -68,6 +68,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week7/Rhombus%20Shape.png" alt="Rhombus" style="width:250px;height:250px;">
         <img src="Images/Week7/Cut%20Rhombus%20Shape.png" alt="Cut Rhombus" style="width:250px;height:250px;">
         <img src="Images/Week7/Downloading%20Rhombus.png" alt="Downloading Rhombus" style="width:250px;height:250px;">
+        <img src="Images/Week7/BlankTinkerCad.PNG" alt="Downloading Rhombus" style="width:250px;height:250px;">
+        <img src="Images/Week7/SelectTable.PNG" alt="Downloading Rhombus" style="width:250px;height:500px;">
+
+
         <h2 class="w3-text-blue">Awful Software</h2>
         <p>Here is where my story of my battle with fusion slicer should probably go, however to hold off telling the story till here would've killed me. So I unfortunately need to get right into describing how I made the zip file that I needed.</p>
         <p>The process of actually just getting the zip was surprisingly pleasant. I just tossed in the .stl. Made the material type known as cardboard. I then told it how many slices I wanted on each axis, and picked a size for the thing that seemed reasonable to me. Once that was done, I could not go look at the instructions or else the program crashes. That took me about 3 times to figure out, and in the end I just guessed that the numbers probably lined up. Since I couldn't look at the instructions step the last thing left for me to do is to toss it all into illustrator, and combine them all onto one page.</p>
@@ -75,6 +79,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week7/Slicer%20Thing.png" alt="One arm" style="width:250px;height:250px;">
         <img src="Images/Week7/Slicer%20Settings.png" alt="One arm" style="width:250px;height:250px;">
         <img src="Images/Week7/Save%20Screen.png" alt="One arm" style="width:250px;height:250px;">
+        <img src="Images/Week7/SLICEYBOI.PNG" alt="One arm" style="width:250px;height:250px;">
+
         <h2 class="w3-text-blue">Tiny Mistake</h2>
         <p>So since I've been swapping between computers and have been bad at acutally tossing things up at this website, so I am unfortunately unable to show you photos of the wonderful time I had playing in illustrator. In my perfect world I would have just redone this process to show you photos of it. However I can't download Illustrator, so I am up the proverbial river. </p>
         <p>So when I first opened the files I got onto Illustrator I had several pages of slices with alot of empty space on them. So what I did was I took each of the slices, and put it onto one page. I then seperated the text from the slices, and sent them to the slicer application.</p>
